Fixed image spacing issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css" />
-    <title>Chewy CMS</title>
+    <title>Khewy Static</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                     <li><img src="assets/img/chewyHQ.png" /></li>
                     <li><span class="fun-facts-title">800</span></li>
                     <li>
-                        <p class="fun-facts-description">Pet lovers work at Chewy and we are growing.</p>
+                        <p class="fun-facts-description">Pet lovers work at Khewy and we are growing.</p>
                     </li>
                 </ul>
             </div>
@@ -65,7 +65,7 @@
             <div class="promise-item even">
                 <div class="promise-text promise-text-right">
                     <h3 class="promise-title promise-text ">Agents of Awesomeness</h3>
-                    <p class="promise-description promise-text ">Simmering in sunny Dania Beach, Fl, our knowledgeable and friendly customer service team (we can't get them to stop smiling!) is available 25 hours a day, every single day of the year. That means a real person is always here to help.</p>
+                    <p class="promise-description promise-text ">Simmering in sunny Florida, our knowledgeable and friendly customer service team (we can't get them to stop smiling!) is available 25 hours a day, every single day of the year. That means a real person is always here to help.</p>
                 </div>
                 <div class="promise-img promise-img-left"><img class="promise-img" src="assets/img/chewy_team.png" /> </div>
             </div>
@@ -81,7 +81,7 @@
             <div class="promise-item even">
                 <div class="promise-text promise-text-right">
                     <h3 class="promise-title promise-text ">365 Day Hassle-Free Returns</h3>
-                    <p class="promise-description promise-text ">Not every purchase can be a home run, and we get it. That's why our policy is simple: if you (or your pet) are not 100% totally, completely, and unconditionally satisfied for any reason whatsoever, let us know! Here at Chewy.com, you're in good paws.</p>
+                    <p class="promise-description promise-text ">Not every purchase can be a home run, and we get it. That's why our policy is simple: if you (or your pet) are not 100% totally, completely, and unconditionally satisfied for any reason whatsoever, let us know! Here at Khewy.com, you're in good paws.</p>
                 </div>
                 <div class="promise-img promise-img-left"><img class="promise-img" src="assets/img/chewy_gifts.png" /> </div>
             </div>
